# pushy-cli

./: app.py  pyproject.toml  readme.md  requirements.txt  test_app.py
query/: endpoint.json
